--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-map-picker",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A package to help user select location on google map. Uses react-native-maps",
   "main": "index.js",
   "author": "Afshin Talebi <afshin.talebi@gmail.com>",
@@ -32,9 +32,10 @@
   ],
   "peerDependencies": {
     "react": "16.8.6",
-    "react-native": "0.59.7",
+    "react-native": "^0.60.0",
     "react-native-maps": "^0.24.2",
-    "react-native-vector-icons": "^6.4.2"
+    "react-native-vector-icons": "^6.4.2",
+    "@react-native-community/geolocation": "^2.0.2"
   },
   "dependencies": {
     "prop-types": "^15.7.2"
