--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "react-native": "^0.60.0",
     "react-native-maps": "^0.24.2",
     "react-native-vector-icons": "^6.4.2",
-    "@react-native-community/geolocation": "^2.0.2"
+    "react-native-geolocation-service": "^3.1.0"
   },
   "dependencies": {
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2"    
   }
 }
